--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,53 @@
 [project]
 name = "fw-ipsets"
 version = "0.1.0"
-description = "Add your description here"
+description = "Apply text-based ipset list to Linux kernel"
+authors = [
+    { name = "Rafal Macyszyn" }
+]
+readme = "README.md"
+
+license = "BSD-2-Clause"
+license-files = ["LICENSE"]
+
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Environment :: Console",
+    "Intended Audience :: System Administrators",
+    "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Topic :: Internet",
+    "Topic :: System :: Networking :: Firewalls",
+]
+
 requires-python = ">=3.13"
+
 dependencies = [
     "netaddr>=1.3.0",
     "pydantic>=2.12.4",
     "rich>=14.2.0",
     "toml>=0.10.2",
 ]
+
+[dependency-groups]
+dev = [
+    "uv_build>=0.9.11,<0.10.0",
+]
+
+[build-system]
+requires = ["uv_build>=0.9.11,<0.10.0"]
+build-backend = "uv_build"
+
+[tool.uv.build-backend]
+data = [
+    'config.sample.toml',
+]
+
+
+[project.scripts]
+fw-ipsets = "fw_ipsets.fw_ipsets:main"
